test/pass/atrib_expr.min
program start
    number x;
    number y;
    x := (y := 3) !
end
