test/fail/straritm.min
program
    number x := 3
start
    x + "123" !
end
